# ride-the-lightning-startos

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  UPDATING.md  check-web.sh  config_spec.yaml  docker_entrypoint.sh  instructions.md  manifest.yaml  package-lock.json  package.json
.github/workflows/: buildService.yml  releaseService.yml
Old/scripts/: embassy.ts
assets/compat/: c-lightning_rules.yaml  config_spec.yaml
configurator/: Cargo.toml
configurator/src/: RTL-Config.json.template  main.rs
docs/: README.md  instructions.md
migrations/: lt_0_12_3.sh
scripts/: bundle.ts  deps.ts  embassy.ts
scripts/procedures/: dependencies.ts  getConfig.ts  health.ts  main.ts  migrations.ts  setConfig.ts
scripts/services/: dependencies.ts  getConfig.ts  migrations.ts  setConfig.ts
startos/: backups.ts  dependencies.ts  index.ts  init.ts  interfaces.ts  main.ts  manifest.ts  properties.ts  store.ts  utils.ts  wrapperData.ts
startos/actions/: index.ts  resetPassword.ts  setNodes.ts
startos/config/: read.ts  save.ts  spec.ts
startos/dependencies/: dependencies.ts
startos/file-models/: RTL-Config.json.ts  store.json.ts
startos/fileModels/: RTL-Config.json.ts
startos/init/: index.ts  monitorConfig.ts  seedFiles.ts  setupRtl.ts  taskSetNodes.ts
startos/install/: versionGraph.ts
startos/manifest/: i18n.ts  index.ts
startos/migrations/: index.ts  v0_15_2_1.ts
startos/procedures/: autoConfig.ts  dependencyMounts.ts  init.ts  interfaces.ts  main.ts  properties.ts
startos/versions/: index.ts  v0.15.2.1.ts  (+9 more)
(+39 files in other folders)
