[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
name = "configurator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
base64 = "0.13.0"
http = "0.2.1"
linear-map = { version = "1.2.0", features = ["serde_impl"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
serde_yaml = "0.8.13"
